syntax = "proto3";

package keeperservice.grpc;

option go_package = "github.com/nessai1/gophkeeper/api/proto";


message PingRequest {
  string message = 1;
}

message PingResponse {
  string answer = 1;
  string error = 2;
}

message UserCredentialsRequest {
  string login = 1;
  string password = 2;
}

message UserCredentialsResponse {
  string token = 1;
  string error = 2;
}


enum PlainSecretType {
  LOGIN_PASSWORD = 0;
  CREDIT_CARD = 1;
  TEXT = 2;
}

message UploadPlainSecretRequest {
  string secret = 1;
  string type = 2;
  string name = 3;
}

message UploadPlainSecretResponse {
  string error = 1;
}


message MediaSecretMetadata {
  string name = 1;
  bool overwrite = 2;
}

message MediaSecret {
  bytes chunk = 1;
}

message UploadMediaSecretRequest {
  oneof request {
    MediaSecretMetadata metadata = 1;
    MediaSecret data = 2;
  }
}

message UploadMediaSecretResponse {
  string uuid = 1;
  string name = 2;
  string error = 3;
}


message DownloadMediaSecretRequest {
  string secret_name = 1;
}

message DownloadMediaSecretResponse {
  MediaSecret secretPart = 1;
}


service KeeperService {
  rpc Ping(PingRequest) returns (PingResponse);
  rpc Register(UserCredentialsRequest) returns (UserCredentialsResponse);
  rpc Login(UserCredentialsRequest) returns (UserCredentialsResponse);

  rpc UploadMediaSecret(stream UploadMediaSecretRequest) returns(UploadMediaSecretResponse);
  rpc DownloadMediaSecret(DownloadMediaSecretRequest) returns(stream DownloadMediaSecretResponse);
}
